# leptos

examples/axum_redirect_demo/: Cargo.toml  Makefile.toml
examples/axum_redirect_demo/src/: landing.rs  lib.rs  main.rs
examples/router_trailing_slash_axum/: Cargo.toml
examples/router_trailing_slash_axum/src/: lib.rs  main.rs
examples/suspense_tests/src/: instrumented.rs
